--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Edit.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Edit.cshtml
@@ -2,7 +2,7 @@
 @model LoginOgInfo.Pages.LokalerPage.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Redigér lokaler";
 }
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
@@ -19,55 +19,64 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-
-    <h1>Edit</h1>
-
-    <h4>LokalerInfo</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="LokalerInfo.ID" />
-                <div class="form-group">
-                    <label asp-for="LokalerInfo.Lokalenummer" class="control-label"></label>
-                    <input asp-for="LokalerInfo.Lokalenummer" class="form-control" />
-                    <span asp-validation-for="LokalerInfo.Lokalenummer" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="LokalerInfo.Lejer" class="control-label"></label>
-                    <input asp-for="LokalerInfo.Lejer" class="form-control" />
-                    <span asp-validation-for="LokalerInfo.Lejer" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="LokalerInfo.Medarbejderantal" class="control-label"></label>
-                    <input asp-for="LokalerInfo.Medarbejderantal" class="form-control" />
-                    <span asp-validation-for="LokalerInfo.Medarbejderantal" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
-                </div>
-            </form>
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-3">
+            <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+            <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+            <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
         </div>
     </div>
-
-    <div>
-        <a asp-page="./Index">Back to List</a>
+</div>
+<div class="row">
+    <div class="col-12">
+        <hr class="mb-4 orangeline noviyellow" />
+        <p class="novifont headline">
+            Vil du redigere dette lokale?
+        </p>
+        <div class="row">
+            <div class="col-md-4">
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="LokalerInfo.ID" />
+                    <div class="form-group">
+                        <label asp-for="LokalerInfo.Lokalenummer" class="control-label"></label>
+                        <input asp-for="LokalerInfo.Lokalenummer" class="form-control" />
+                        <span asp-validation-for="LokalerInfo.Lokalenummer" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LokalerInfo.Lejer" class="control-label"></label>
+                        <input asp-for="LokalerInfo.Lejer" class="form-control" />
+                        <span asp-validation-for="LokalerInfo.Lejer" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LokalerInfo.Medarbejderantal" class="control-label"></label>
+                        <input asp-for="LokalerInfo.Medarbejderantal" class="form-control" />
+                        <span asp-validation-for="LokalerInfo.Medarbejderantal" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary btn btn-primary btn-lg novifont noviyellow text-center create shadow" />
+                        <a class="btn btn-primary btn-lg novifont noviyellow text-center create shadow" asp-page="./Index">Back to List</a>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
+</div>
 }
 
 else
 
 {
-    <p class="novifont headline mt-3 mb-3">
-        Du skal være logget ind for at redigere i databasen.
-    </p>
-    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" onclick="window.location.href = '/Identity/Account/login'">
-        Klik her for at logge ind
-    </button>
-    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
-        Klik her for at returnere til forsiden
-    </button>
+<p class="novifont headline mt-3 mb-3">
+    Du skal være logget ind for at redigere i databasen.
+</p>
+<button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" onclick="window.location.href = '/Identity/Account/login'">
+    Klik her for at logge ind
+</button>
+<button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
+    Klik her for at returnere til forsiden
+</button>
 }
 
 
