--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/ParkeringPage/Create.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/ParkeringPage/Create.cshtml
@@ -73,7 +73,7 @@
                                     <span asp-validation-for="ParkeringsInfo.Nummerplade" class="text-center"></span>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Registrer" class="btn btn-primary novifont shadow btn-lg button noviyellow mt-4" />
+                                    <input type="submit" value="Registrer" class="btn btn-primary novifont shadow btn-lg button noviyellow mt-4" onclick="alert('Din parkering er nu registreret.')" />
                                 </div>
                             </form>
                         </div>
