--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Edit.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Edit.cshtml
@@ -2,7 +2,7 @@
 @model LoginOgInfo.Pages.VirksomhederPage.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Redigér virksomhed";
 }
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
@@ -21,11 +21,21 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <h1>Edit</h1>
-
-    <h4>VirksomhederInfo</h4>
-    <hr />
-    <div class="row">
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-3">
+            <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+            <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+            <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <hr class="mb-4 orangeline noviyellow" />
+        <p class="novifont headline">
+            Vil du redigere denne virksomhed?
+        </p>
         <div class="col-md-4">
             <form method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -61,20 +71,17 @@
                     <span asp-validation-for="VirksomhederInfo.ID" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Save" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" />
+                    <a class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" asp-page="./Index">Back to List</a>
                 </div>
             </form>
         </div>
     </div>
-
-    <div>
-        <a asp-page="./Index">Back to List</a>
-    </div>
+</div>
 }
-
 else
 
-{
+    {
     <p class="novifont headline mt-3 mb-3">
         Du skal være logget ind for at redigere i databasen.
     </p>
@@ -84,8 +91,8 @@ else
     <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
         Klik her for at returnere til forsiden
     </button>
-}
+    }
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
