--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/LokalerPage/Details.cshtml
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="\css/core.css" />
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-
     <title>@ViewData["title"]</title>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,41 +21,54 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-
-<div>
-    <h4>LokalerInfo</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LokalerInfo.Lokalenummer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LokalerInfo.Lokalenummer)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LokalerInfo.Lejer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LokalerInfo.Lejer)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LokalerInfo.Medarbejderantal)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LokalerInfo.Medarbejderantal)
-        </dd>
-    </dl>
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-3">
+            <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+            <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+            <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <hr class="mb-4 orangeline noviyellow" />
+        <div class="row">
+            <div class="col-12">
+                <dl class="row">
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.LokalerInfo.Lokalenummer)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.LokalerInfo.Lokalenummer)
+                    </dd>
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.LokalerInfo.Lejer)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.LokalerInfo.Lejer)
+                    </dd>
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.LokalerInfo.Medarbejderantal)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.LokalerInfo.Medarbejderantal)
+                    </dd>
+                </dl>
+            </div>
+        </div>
+    </div>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.LokalerInfo.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>  
+    <a class="btn btn-primary btn-lg novifont noviyellow text-center create shadow" asp-page="./Edit" asp-route-id="@Model.LokalerInfo.ID">Edit</a>
+    <a class="btn btn-primary btn-lg novifont noviyellow text-center create shadow" asp-page="./Index">Back to List</a>
+</div>
 }
 
 else
 {
 
-    <body>
+<body>
     <div class="container-fluid">
 
         <div class="row">
@@ -70,16 +81,16 @@ else
 
         <div class="row">
             <div class="col-3">
-                <img src ="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
-                <img src ="\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1"/>
-                <img src ="\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid"/>
+                <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1" />
+                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid" />
             </div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-12">
-            <hr class="mb-4 orangeline noviyellow"/>
+            <hr class="mb-4 orangeline noviyellow" />
         </div>
     </div>
 
@@ -103,13 +114,13 @@ else
             <div class="row">
                 <div class="col-6">
                     <p class="normaltext novifont">
-                        Lokalenummer: @Html.DisplayFor(model => model.LokalerInfo.Lokalenummer)<br/>
-                        Lejer: @Html.DisplayFor(model => model.LokalerInfo.Lejer)<br/>
+                        Lokalenummer: @Html.DisplayFor(model => model.LokalerInfo.Lokalenummer)<br />
+                        Lejer: @Html.DisplayFor(model => model.LokalerInfo.Lejer)<br />
                         Medarbejderantal: @Html.DisplayFor(model => model.LokalerInfo.Medarbejderantal)
                     </p>
                 </div>
                 <div class="col-6">
-                    <img alt = "Novi Logo" src="/Pictures/novi.png" class="float-right logo2"/>
+                    <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right logo2" />
                 </div>
             </div>
             <div class="row">
@@ -125,5 +136,5 @@ else
         </div>
     </div>
 
-    </body>
+</body>
 }
