--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/MedarbejderPage/Details.cshtml
@@ -57,10 +57,10 @@
             </dd>
         </dl>
     </div>
-    <div>
-        <a asp-page="./Edit" asp-route-id="@Model.MedarbejderInfo.ID">Edit</a> |
-        <a asp-page="./Index">Back to List</a>
-    </div>
+  <div>
+    <a class="btn btn-primary btn-lg novifont noviyellow text-center create shadow" asp-page="./Edit" asp-route-id="@Model.MedarbejderInfo.ID">Edit</a>
+    <a class="btn btn-primary btn-lg novifont noviyellow text-center create shadow" asp-page="./Index">Back to List</a>
+</div>
 }
 else
 {
@@ -137,7 +137,7 @@ else
                         <p class="findsomethingboxheader novifont">
                             Sådan finder du @Html.DisplayFor(model => model.MedarbejderInfo.Navn)
                         </p><p class="normaltext novifont">
-
+                            @Html.DisplayFor(model => model.MedarbejderInfo.Stilling)
                         </p>
                     </div>
                 </div>
@@ -150,15 +150,6 @@ else
 
     </body>
 }
-
-
-
-<!--
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.full.min.js"></script>
--->
-
 
 <script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
 <script src="/vendor/bootstrap/js/popper.js"></script>
