--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Oversigtskort.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Oversigtskort.cshtml
@@ -42,7 +42,7 @@
 
     <div class="row">
         <div class="col-2 text-center novifont">
-            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/faq'">
+            <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/search'">
                 Søg
             </button>
             <button type="button" class="btn btn-primary btn-lg noviyellow mb-4 button btn-block shadow" onclick="window.location.href = '/oversigtskort'">
