--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Create.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Create.cshtml
@@ -2,7 +2,7 @@
 @model LoginOgInfo.Pages.VirksomhederPage.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Tilføj ny virksomhed";
 }
 
 @using Microsoft.AspNetCore.Identity
@@ -20,62 +20,78 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <h1>Create</h1>
-
-    <h4>VirksomhederInfo</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="VirksomhederInfo.Navn" class="control-label"></label>
-                    <input asp-for="VirksomhederInfo.Navn" class="form-control" />
-                    <span asp-validation-for="VirksomhederInfo.Navn" class="text-danger"></span>
+    <body>
+        <div class="container-fluid">
+            <div class="row mt-5">
+                <div class="col-3">
+                    <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                    <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+                    <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
                 </div>
-                <div class="form-group">
-                    <label asp-for="VirksomhederInfo.CVR" class="control-label"></label>
-                    <input asp-for="VirksomhederInfo.CVR" class="form-control" />
-                    <span asp-validation-for="VirksomhederInfo.CVR" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="VirksomhederInfo.Medarbejdere" class="control-label"></label>
-                    <input asp-for="VirksomhederInfo.Medarbejdere" class="form-control" />
-                    <span asp-validation-for="VirksomhederInfo.Medarbejdere" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="VirksomhederInfo.Lokale" class="control-label"></label>
-                    <input asp-for="VirksomhederInfo.Lokale" class="form-control" />
-                    <span asp-validation-for="VirksomhederInfo.Lokale" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="VirksomhederInfo.Findvej" class="control-label"></label>
-                    <input asp-for="VirksomhederInfo.Findvej" class="form-control" />
-                    <span asp-validation-for="VirksomhederInfo.Findvej" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>
+            </div>
         </div>
-    </div>
-    <div>
-        <a asp-page="Index">Back to List</a>
-    </div>
+        <div class="row">
+            <div class="col-12">
+                <hr class="mb-4 orangeline noviyellow" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p class="novifont headline">
+                    Opret ny Virksomhed
+                </p>
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="VirksomhederInfo.Navn" class="control-label"></label>
+                        <input asp-for="VirksomhederInfo.Navn" class="form-control" />
+                        <span asp-validation-for="VirksomhederInfo.Navn" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="VirksomhederInfo.CVR" class="control-label"></label>
+                        <input asp-for="VirksomhederInfo.CVR" class="form-control" />
+                        <span asp-validation-for="VirksomhederInfo.CVR" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="VirksomhederInfo.Medarbejdere" class="control-label"></label>
+                        <input asp-for="VirksomhederInfo.Medarbejdere" class="form-control" />
+                        <span asp-validation-for="VirksomhederInfo.Medarbejdere" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="VirksomhederInfo.Lokale" class="control-label"></label>
+                        <input asp-for="VirksomhederInfo.Lokale" class="form-control" />
+                        <span asp-validation-for="VirksomhederInfo.Lokale" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="VirksomhederInfo.Findvej" class="control-label"></label>
+                        <input asp-for="VirksomhederInfo.Findvej" class="form-control" />
+                        <span asp-validation-for="VirksomhederInfo.Findvej" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Opret Virksomhed" class="btn btn-primary btn-lg novifont noviyellow text-center create shadow" />
+                        <button type="button" class="btn btn-primary btn-lg novifont noviyellow text-center create shadow"
+                                onclick="window.location.href = '/Identity/Account/AdminNavi'">
+                            Tilbage til Admin Panel
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </body>
 }
-
 else
-
 {
-    <p class="novifont headline mt-3 mb-3">
-        Du skal være logget ind for at redigere i databasen.
-    </p>
-    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" onclick="window.location.href = '/Identity/Account/login'">
-        Klik her for at logge ind
-    </button>
-    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
-        Klik her for at returnere til forsiden
-    </button>
+    <body>
+        <p class="novifont headline mt-3 mb-3">
+            Du skal være logget ind for at redigere i databasen.
+        </p>
+        <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" onclick="window.location.href = '/Identity/Account/login'">
+            Klik her for at logge ind
+        </button>
+        <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
+            Klik her for at returnere til forsiden
+        </button>
+    </body>
 }
 
 @section Scripts {
