--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Delete.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Delete.cshtml
@@ -2,7 +2,7 @@
 @model LoginOgInfo.Pages.VirksomhederPage.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Slet virksomhed";
 }
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
@@ -20,63 +20,84 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <h1>Delete</h1>
+    <body>
+        <div class="container-fluid">
+            <div class="row mt-5">
+                <div class="col-3">
+                    <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+                    <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+                    <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <hr class="mb-4 orangeline noviyellow" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p class="novifont headline">
+                    Vil du slette denne virksomhed?
+                </p>
+                <dl class="row">
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.VirksomhederInfo.Navn)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.VirksomhederInfo.Navn)
+                    </dd>
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.VirksomhederInfo.CVR)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.VirksomhederInfo.CVR)
+                    </dd>
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.VirksomhederInfo.Medarbejdere)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.VirksomhederInfo.Medarbejdere)
+                    </dd>
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.VirksomhederInfo.Lokale)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)
+                    </dd>
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.VirksomhederInfo.Findvej)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.VirksomhederInfo.Findvej)
+                    </dd>
+                </dl>
 
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>VirksomhederInfo</h4>
-        <hr />
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.Navn)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.Navn)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.CVR)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.CVR)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.Medarbejdere)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.Medarbejdere)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.Lokale)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.Findvej)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.Findvej)
-            </dd>
-        </dl>
+                <form method="post">
+                    <input type="hidden" asp-for="VirksomhederInfo.ID" />
+                    <input type="submit" value="Delete" class="btn btn-danger btn-lg" /> 
+                    <button type="button" class="btn btn-primary btn-lg novifont noviyellow text-center create shadow"
+                            onclick="window.location.href = '/Identity/Account/AdminNavi'">
+                        Tilbage til Admin Panel
+                    </button>
+                </form>
 
-        <form method="post">
-            <input type="hidden" asp-for="VirksomhederInfo.ID" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-page="./Index">Back to List</a>
-        </form>
-    </div>
+            </div>
+        </div>
+
+    </body>
 }
-
 else
-
 {
-    <p class="novifont headline mt-3 mb-3">
-        Du skal være logget ind for at redigere i databasen.
-    </p>
-    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" onclick="window.location.href = '/Identity/Account/login'">
-        Klik her for at logge ind
-    </button>
-    <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
-        Klik her for at returnere til forsiden
-    </button>
+    <body>
+        <p class="novifont headline mt-3 mb-3">
+            Du skal være logget ind for at redigere i databasen.
+        </p>
+        <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow mr-4" onclick="window.location.href = '/Identity/Account/login'">
+            Klik her for at logge ind
+        </button>
+        <button type="button" class="btn btn-primary btn-lg novifont noviyellow button shadow" onclick="window.location.href = '/index'">
+            Klik her for at returnere til forsiden
+        </button>
+    </body>
 }
