--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Details.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Details.cshtml
@@ -11,7 +11,7 @@
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="\css/core.css"/>
+    <link rel="stylesheet" href="\css/core.css" />
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
     <title>@ViewData["title"]</title>
@@ -23,55 +23,63 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <body>
-    <div>
-        <h4>VirksomhederInfo</h4>
-        <hr/>
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.Navn)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.Navn)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.CVR)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.CVR)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.Medarbejdere)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.Medarbejdere)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.Lokale)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.VirksomhederInfo.Findvej)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.VirksomhederInfo.Findvej)
-            </dd>
-        </dl>
+    <div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-3">
+            <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
+            <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1)" class="icons img-fluid mr-1" />
+            <img src="\Pictures/højre.png" onclick="javascript:history.go(+1)" class="icons img-fluid" />
+        </div>
+    </div>
+</div>
+    <div class="row">
+        <div class="col-12">
+            <hr class="mb-4 orangeline noviyellow"/>
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo.Navn)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.VirksomhederInfo.Navn)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo.CVR)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.VirksomhederInfo.CVR)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo.Medarbejdere)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.VirksomhederInfo.Medarbejdere)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo.Lokale)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.VirksomhederInfo.Findvej)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.VirksomhederInfo.Findvej)
+                </dd>
+            </dl>
+        </div>
     </div>
 
     <div>
-        <a asp-page="./Edit" asp-route-id="@Model.VirksomhederInfo.ID">Edit</a> |
-        <a asp-page="./Index">Back to List</a>
+        <a class="btn btn-primary btn-lg novifont noviyellow text-center create shadow" asp-page="./Edit" asp-route-id="@Model.VirksomhederInfo.ID">Edit</a>
+        <a class="btn btn-primary btn-lg novifont noviyellow text-center create shadow" asp-page="./Index">Back to List</a>
     </div>
-    </body>
 }
 
 else
 {
 
-    <body>
+<body>
     <div class="container-fluid">
 
         <div class="row">
@@ -85,15 +93,15 @@ else
         <div class="row">
             <div class="col-3">
                 <img src="\Pictures/hus.png" onclick="window.location.href = '/index'" class="icons img-fluid mr-1" ;>
-                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1"/>
-                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid"/>
+                <img src="\Pictures/venstre.png" onclick="javascript:history.go(-1);" class="icons img-fluid mr-1" />
+                <img src="\Pictures/højre.png" onclick="javascript:history.go(+1);" class="icons img-fluid" />
             </div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-12">
-            <hr class="mb-4 orangeline noviyellow"/>
+            <hr class="mb-4 orangeline noviyellow" />
         </div>
     </div>
 
@@ -117,13 +125,13 @@ else
             <div class="row">
                 <div class="col-6">
                     <p class="normaltext novifont">
-                        Firma: @Html.DisplayFor(model => model.VirksomhederInfo.Navn)<br/>
-                        Lokale: @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)<br/>
+                        Firma: @Html.DisplayFor(model => model.VirksomhederInfo.Navn)<br />
+                        Lokale: @Html.DisplayFor(model => model.VirksomhederInfo.Lokale)<br />
                         CVR: @Html.DisplayFor(model => model.VirksomhederInfo.CVR)
                     </p>
                 </div>
                 <div class="col-6">
-                    <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right logo2"/>
+                    <img alt="Novi Logo" src="/Pictures/novi.png" class="float-right logo2" />
                 </div>
             </div>
             <div class="row">
@@ -139,5 +147,5 @@ else
         </div>
     </div>
 
-    </body>
+</body>
 }
