--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LoginOgInfo.Pages.IndexModel
 @{
-
+    ViewData["Title"] = "Interaktiv Receptionist";
 }
 
 
@@ -16,13 +16,13 @@
     <title>Startside</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+</head> 
 
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col float-left logo1">
-                <img src="\Pictures/novi.png" />
+                <img src="\Pictures/novi.png"/>
             </div>
         </div>
 
