--- a/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Index.cshtml
+++ b/Interaktiv receptionist/LoginOgInfo/LoginOgInfo/Pages/VirksomhederPage/Index.cshtml
@@ -107,7 +107,7 @@
                     @Html.DisplayFor(modelItem => item.ID)
                 </td>
                 <td>
-                    <a class="noviyellow btn float-right" asp-page="./Edit" asp-route-id="@item.ID">Edit</a>
+                    <a class="noviyellow btn-primary btn float-right" asp-page="./Edit" asp-route-id="@item.ID">Edit</a>
                     <a class="noviyellow btn float-right mr-1" asp-page="./Details" asp-route-id="@item.ID">Details</a>
                     <a class="noviyellow btn float-right mr-1" asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
                 </td>
